# winter

./: .clang-format  .gitignore  CHANGELOG  CMakeLists.txt  Dockerfile.devenv  README.md  astyle.cfg  dependencies.cmake  devcontainer.json  install
wintercpp/: .gitignore  CMakeLists.txt  dependencies.cmake
wintercpp/include/wintercpp/: winter.h
wintercpp/include/wintercpp/boot/: winter_boot.h
wintercpp/include/wintercpp/config/: winter_env.h.in
wintercpp/include/wintercpp/data/: winter_data_pageable.h  winter_data_pageable.tpp
wintercpp/include/wintercpp/data/repository/: winter_data_repository.h
wintercpp/include/wintercpp/data/response/: winter_data_response.h  winter_data_response.tpp  winter_data_response_status.h  winter_data_result_response_collection.h
wintercpp/include/wintercpp/data/sql/column/: winter_data_sql_column.h
wintercpp/include/wintercpp/data/sql/connection/: winter_data_sql_connection.h  winter_data_sql_result_row.h  winter_data_sql_result_row.tpp
wintercpp/include/wintercpp/data/sql/exception/: winter_sql_exception.h
wintercpp/include/wintercpp/data/sql/field/: winter_data_sql_abstract_field.h  winter_data_sql_data_type.h  winter_data_sql_field.h  winter_data_sql_field.tpp  winter_data_sql_field_type.h
wintercpp/include/wintercpp/data/sql/function/: winter_data_sql_function_min.h
wintercpp/include/wintercpp/data/sql/migration/: winter_data_migration.h  winter_data_migration.tpp
wintercpp/include/wintercpp/data/sql/mysql/: winter_sql_mysql_driver.h
wintercpp/include/wintercpp/data/sql/preparedstatement/: winter_data_sql_abstract_prepared_statement_field.h  (+2 more)
wintercpp/include/wintercpp/exception/database/: winter_database_exception.h
wintercpp/include/wintercpp/exception/generic/: winter_exception.h  winter_internal_exception.h
wintercpp/include/wintercpp/exception/security/: winter_security_exception.h  winter_unauthenticated_exception.h
wintercpp/include/wintercpp/exception/sql/: winter_sql_exception.h
wintercpp/include/wintercpp/grpc/: winter_grpc_controller.h
wintercpp/include/wintercpp/model/: winter_base.h
wintercpp/include/wintercpp/redis/: winter_redis_connection.h  winter_redis_connection_config.h  winter_redis_pool.h  winter_redis_session.h
wintercpp/include/wintercpp/security/: winter_security_auth_interceptor.h  winter_security_jwt.h  winter_security_jwt_grpc.h  winter_security_session.h  winter_security_token_status.h  winter_security_user_info.h
wintercpp/include/wintercpp/template/: winter_connection_pool_singleton_template.h  winter_connection_pool_singleton_template.tpp  winter_connection_pool_template.h  winter_connection_pool_template.tpp  winter_connection_template.h  winter_response_template.h  winter_response_template.tpp  winter_singleton_template.h
wintercpp/include/wintercpp/util/: winter_date.h  winter_macro.h  winter_pool_descriptor.h  winter_random.h  winter_string_util.h  winter_uuid_generator.h
wintercpp/src/boot/: winter_boot.cpp
wintercpp/src/data/sql/column/: winter_data_sql_column.cpp
wintercpp/src/data/sql/field/: winter_data_sql_field.cpp  winter_data_sql_field_type.cpp
wintercpp/src/data/sql/function/: winter_data_sql_function_min.cpp
wintercpp/src/data/sql/preparedstatement/: winter_data_sql_prepared_statement.cpp
wintercpp/src/data/sql/statement/: winter_data_sql_delete.cpp  winter_data_sql_insert.cpp  winter_data_sql_select.cpp  winter_data_sql_statement_util.cpp  winter_data_sql_update.cpp
wintercpp/src/data/sql/table/: winter_data_sql_id_type.cpp  winter_data_sql_table.cpp  winter_data_sql_uuid_table.cpp
wintercpp/src/exception/database/: winter_database_exception.cpp
wintercpp/src/exception/generic/: winter_exception.cpp  winter_internal_exception.cpp
wintercpp/src/exception/security/: winter_security_exception.cpp  winter_unauthenticated_exception.cpp
wintercpp/src/exception/sql/: winter_sql_exception.cpp
wintercpp/src/grpc/: winter_grpc_controller.cpp
wintercpp/src/model/: winter_base.cpp
wintercpp/src/redis/: winter_redis_connection.cpp  winter_redis_connection_config.cpp  winter_redis_pool.cpp  winter_redis_session.cpp
wintercpp/src/security/: winter_security_auth_interceptor.cpp  winter_security_jwt.cpp  winter_security_jwt_grpc.cpp  winter_security_token_status.cpp  winter_security_user_info.cpp
wintercpp/src/util/: winter_date.cpp  winter_pool_descriptor.cpp  winter_random.cpp  winter_string_util.cpp  winter_uuid_generator.cpp
wintercpp/test/: winter_clause_and_test.cpp  winter_clause_from_test.cpp  winter_clause_in_test.cpp  winter_clause_into_test.cpp  winter_clause_join_test.cpp  winter_clause_not_in_test.cpp  winter_clause_on_test.cpp  winter_clause_or_test.cpp  winter_clause_select_test.cpp  winter_clause_set_test.cpp  winter_clause_values_test.cpp  winter_clause_where_test.cpp  winter_data_sql_table_test.cpp  winter_field_test.cpp  winter_field_type_test.cpp  winter_preparedStatement_test.cpp  winter_random_test.cpp  winter_response_test.cpp  winter_sql_function_test.cpp
wintercpp_mariadb_impl/: CMakeLists.txt  dependencies.cmake
wintercpp_mariadb_impl/cmake/: dep_mariadb_connector.cmake
wintercpp_mysql/: CMakeLists.txt  dependencies.cmake
wintercpp_mysql/cmake/: dep_mariadb_connector.cmake  dep_mysql.cmake  dep_mysql_connector.cmake
wintercpp_mysql/include/wintercpp/: winter_mysql.h
wintercpp_mysql_core/: CMakeLists.txt  dependencies.cmake
wintercpp_mysql_core/include/wintercpp/: winter_mysql_core.h
wintercpp_mysql_core/test/: winter_data_sql_mysql_result_row_test.cpp  winter_data_sql_select_test.cpp
wintercpp_test/: .gitignore  CMakeLists.txt  dependencies.cmake  main.cpp  winter_data_sql_mariadb_test.cpp  winter_data_sql_select_test.cpp  winter_data_sql_table.cpp  winter_data_sql_table_test.cpp  winter_grpcjwt_test.cpp  winter_random_test.cpp  winter_response_test.cpp
wintercpp_test/cmake/patches/: mariadb_fix_missing_cstring.patch  mariadb_fix_missing_cstring_test_asserts.patch
wintercpp_test/include/wintercpp/: winter_test_util.h
wintercpp_test/include/wintercpp/docker/: mariadb_docker_helper.h
(+174 files in other folders)
